--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
 </head>
 <body>
     <h1>Music Player</h1>
+    
     <div class="music-container" id="music-container">
         <div class="music-info">
-          <h4 id="title">Empire of the Sun-Alive</h4>
+          <h4 id="title"></h4>
           <div class="progress-container" id="progress-container">
             <div class="progress" id="progress"></div>
           </div>
         </div>
   
-        <audio src="./music/empire_of_the_sun_alive_official_video_-1686121363162537198.mp3" id="audio"></audio>
+        <audio src="music/ukulele.mp3" id="audio"></audio>
   
         <div class="img-container">
-          <img src="./img/empireofthesn.jpg" alt="music-cover" id="cover" />
+          <img src="images/ukulele.jpg" alt="music-cover" id="cover" />
         </div>
         <div class="navigation">
           <button id="prev" class="action-btn">
